# garden

./: .devcontainer.json  .gitignore  Dockerfile  README.md  modules.garden.yml  project.garden.yml  pyproject.toml  requirements.txt
app/: main.py  test_time.py
demo-project-start/: project.garden.yml
demo-project-start/.garden/: metadata.json
demo-project-start/.garden/cache/provider-statuses/: container.json  exec.json
demo-project-start/.garden/kubernetes.garden/: metadata.json
demo-project-start/.garden/kubernetes.garden/cache/provider-statuses/: container.json  exec.json
demo-project-start/.garden/logs/: deploy.silly.2023-02-25T17:23:34.275Z.jsonl
demo-project-start/backend/.garden/: metadata.json
demo-project-start/frontend/.garden/: metadata.json
demo-project-start/frontend/.garden/logs/: create-module.silly.2023-02-25T17:06:27.251Z.jsonl
garden-demo/: garden.sh  project.garden.yml.orig
garden/examples/demo-project-start/.garden/cache/provider-statuses/: templated.json
garden/examples/demo-project-start/.garden/kubernetes.garden/cache/provider-statuses/: local-kubernetes.json  templated.json
garden/examples/demo-project-start/.garden/logs/: create-project.silly.2023-02-25T17:08:23.587Z.jsonl  deploy.silly.2023-02-25T17:14:52.616Z.jsonl
garden/examples/demo-project-start/backend/: garden.yml
garden/examples/demo-project-start/backend/.garden/logs/: create-module.silly.2023-02-25T17:06:09.242Z.jsonl
garden/examples/demo-project-start/frontend/: garden.yml
