[tool.pdm]

[project]
name = "fastapi-time"
version = "0.1.0"
description = "A simple FastAPI app that returns the current time."
authors = [
    {name = "Tao Hansen", email = "59834693+worldofgeese@users.noreply.github.com"},
]
dependencies = [
    "fastapi>=0.89.1",
    "uvicorn>=0.20.0",
    "pytest>=7.2.1",
    "httpx>=0.23.3",
    "freezegun>=1.2.2",
]
requires-python = ">=3.11"
license = {text = "AGPLv3+"}
